app/Python/syntax_error_correction/log.txt
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:3:16: error: expected initializer before 'int'
 } int main ( ) int a = 1 ; 
                ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:6:1: error: 'sum' does not name a type
 sum = identifier ( a , b ) ; 
 ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:7:8: error: 'cout' in namespace 'std' does not name a type
 std :: cout << " Sum: " << sum << std :: endl ;
        ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:8:2: error: expected declaration before '}' token
  }
  ^
